# CameraUpperComputer

./: .gitignore  AttackonFeifei.pro  CMakeLists.txt  README.md  imagedisplay.cpp  imagedisplay.h  imagedisplay.ui  mainwindow.cpp  udpserver.cpp  udpserver.ui
src/: imagedisplay.cpp  mainwindow.cpp  udpserver.cpp
src/forms/: mainwindow.ui
src/headers/: imagedisplay.h  mainwindow.h  udpserver.h
